DB系のモジュールを追加

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.116.1",
+    "SQLAlchemy>=2.0",
+    "psycopg[binary]>=3.2.10",
 ]
