--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "fastapi[standard]>=0.116.1",
     "SQLAlchemy>=2.0",
     "psycopg[binary]>=3.2.10",
+    "python-dotenv>=1.0",
 ]
