--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 services:
   ynym-kakeibo-backend:
-    build:
-      context: .
+    build: .
+    image: ynym-kakeibo-backend
     container_name: ynym-kakeibo-backend
     hostname: ynym-kakeibo-backend
     restart: always
